--- a/MultiConsole/MultiConsole.csproj
+++ b/MultiConsole/MultiConsole.csproj
@@ -53,21 +53,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataBaseOperation.cs" />
     <Compile Include="DictionaryData.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SqlServerDataBase.cs" />
+    <Compile Include="testUser.cs" />
     <Compile Include="YewuKdhm.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DbHelper\DbHelper.csproj">
       <Project>{60896df7-6928-4594-b5c7-7b548a6bd744}</Project>
       <Name>DbHelper</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Db\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
