修改HelperMini事物处理

--- a/MultiConsole/App.config
+++ b/MultiConsole/App.config
@@ -9,7 +9,7 @@
     <!-- Oracle数据库配置 -->
     <add key="OracleConfig" value="data spurce=192.168.66.25;user id=YZXT_YW_TEST;Password=test" />
     <!-- SqlServer数据库配置 -->
-    <add key="SqlServerConfig" value="Data Source=192.168.66.26;database=SR_Authority;Integrated Security=False;user id=suninfo;password=13572468" />
+    <add key="SqlServerConfig" value="Data Source=127.0.0.1;database=ChenxyDataBase;Integrated Security=False;user id=sa;password=chen62221235" />
     <!-- Access数据库配置 -->
     <add key="AccessConfig" value="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=../../Db/AccessDataBase.mdb" />
     <!-- SQLite数据库配置 -->
