--- a/MultiWeb/Web.config
+++ b/MultiWeb/Web.config
@@ -10,6 +10,6 @@
   </system.web>
   <connectionStrings>
     <!-- PetaPco 配置示例 -->
-    <add name="PetaPcoConfig" providerName="MySql.Data.MySqlClient" connectionString="server=192.168.66.25;user id=root;password=root123;database=chenxytest" />
+    <add name="PetaPcoConfig" providerName="System.Data.SqlClient" connectionString="Data Source=(local);Initial Catalog=iSoftStoneFramework;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" />
   </connectionStrings>
 </configuration>
